--- a/index.html
+++ b/index.html
@@ -4,36 +4,24 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>2-second web</title>
+  <title>Demo_gallery</title>
 </head>
 <body>
+  <a href="#">
+    <img src="https://via.placeholder.com/250/100" alt="placeholder_photo" width="250" height="100">
+  </a>
 
-  <main>
-    <img src="https://picsum.photos/400/400?random=1" alt="Random photos"width="400" height="400">
-    <img src="https://picsum.photos/400/400?random=2" alt="Random photos"width="400" height="400">
-    <img src="https://picsum.photos/400/400?random=3" alt="Random photos"width="400" height="400">
-    <img src="https://picsum.photos/400/400?random=4" alt="Random photos"width="400" height="400">
-    <img src="https://picsum.photos/400/400?random=5" alt="Random photos"width="400" height="400">
-    <img src="https://picsum.photos/400/400?random=6" alt="Random photos"width="400" height="400">
-    <img src="https://picsum.photos/400/400?random=7" alt="Random photos"width="400"height="400">
-    <img src="https://picsum.photos/400/400?random=8" alt="Random photos"width="400" height="400">
-
-    <section>
-      <a href="https://t.me/yahyarahimov01"> <img src="https://via.picsum.com/250/150" alt="Connect to Telegram"></a>
-
-
-
-    </section>
-
-
-
-
-
-
-
-
-
-  </main>
+  <nav>
+    <ul>
+      <li><a href="index.html">HOME</a></li>
+      <li><a href="#">Wallpapers</a></li>
+      <li><a href="#">Animal</a></li>
+      <li><a href="#">Girls</a></li>
+      <li><a href="#">Capitals</a></li>
+      <li><a href="#">Buildings</a></li>
+      <li><a href="#">Nature</a></li>
+    </ul>
+ </nav>
 
 
 </body>
