--- a/index.html
+++ b/index.html
@@ -21,8 +21,40 @@
       <li><a href="#">Buildings</a></li>
       <li><a href="#">Nature</a></li>
     </ul>
- </nav>
-
-
+  </nav>
+    <!-- MAIN CONTENT -->
+  <main>
+  <h2>Photo gallery</h2>
+  <hr>
+  <section>
+    <h2>Top Photos</h2>
+    <ul>
+      <li>
+        <img src="https://picsum.photos/250?random=1" alt="Rasm" width="250" heigth="250">
+      </li>
+      <li>
+        <img src="https://picsum.photos/250/250?random=2" alt="Rasm" width="250" heigth="250">
+      </li>
+      <li>
+        <img src="https://picsum.photos/250/250?random=3" alt="Rasm" width="250" heigth="250">
+      </li>
+      <li>
+        <img src="https://picsum.photos/250/250?random=4" alt="Rasm" width="250" heigth="250">
+      </li>
+      <li>
+        <img src="https://picsum.photos/250/250?random=5" alt="Rasm" width="250" heigth="250">
+      </li>
+      <li>
+        <img src="https://picsum.photos/250/250?random=6" alt="Rasm" width="250" heigth="250">
+      </li>
+      <li>
+        <img src="https://picsum.photos/250/250?random=7" alt="Rasm" width="250" heigth="250">
+      </li>
+      <li>
+        <img src="https://picsum.photos/250/250?random=8" alt="Rasm" width="250" heigth="250">
+      </li>
+   </ul>
+  </section>
+  </main>
 </body>
 </html>
