Add footer part

--- a/index.html
+++ b/index.html
@@ -7,21 +7,22 @@
   <title>Demo_gallery</title>
 </head>
 <body>
-  <a href="#">
-    <img src="https://via.placeholder.com/250/100" alt="placeholder_photo" width="250" height="100">
-  </a>
-
-  <nav>
-    <ul>
-      <li><a href="index.html">HOME</a></li>
-      <li><a href="#">Wallpapers</a></li>
-      <li><a href="#">Animal</a></li>
-      <li><a href="#">Girls</a></li>
-      <li><a href="#">Capitals</a></li>
-      <li><a href="#">Buildings</a></li>
-      <li><a href="#">Nature</a></li>
-    </ul>
-  </nav>
+  <header>
+    <a href="#">
+      <img src="https://via.placeholder.com/250/100" alt="placeholder_photo" width="250" height="100">
+    </a>
+    <nav>
+      <ul>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="#">Wallpapers</a></li>
+        <li><a href="#">Animal</a></li>
+        <li><a href="#">Girls</a></li>
+        <li><a href="#">Capitals</a></li>
+        <li><a href="#">Buildings</a></li>
+        <li><a href="#">Nature</a></li>
+      </ul>
+    </nav>
+  </header>
     <!-- MAIN CONTENT -->
   <main>
     <h2>Photo gallery</h2>
@@ -55,6 +56,18 @@
         </li>
       </ul>
     </section>
+    <!-- FOOTER QISMI -->
+    <footer>
+      <ul>
+        <li><a href="#" target="_blank">Telegram</a></li>
+        <li><a href="#" target="_blank">Instagram</a></li>
+        <li><a href="#" target="_blank">YouTube</a></li>
+        <li><a href="#" target="_blank">TikTok</a></li>
+      </ul>
+
+      <p>Copyright 2023 March .TJK</p>
+
+    </footer>
   </main>
 </body>
 </html>
